# dms-backend

./: README.md  pyproject.toml
apps/public_api/: .env  containers.py  main.py  pyproject.toml  settings.py
apps/public_api/configs/: __init__.py  config.py  database_settings.py
apps/public_api/core/: __init__.py  core_fastapi.py  dependency_injector.py  exception_handlers.py  lifespan.py
apps/public_api/routers/: __init__.py  api_docs_routers.py  api_v1_routers.py
